update main html structure to fit with flex, profile css updated

--- a/src/header.scss
+++ b/src/header.scss
@@ -1,6 +1,7 @@
 #headerDiv {
   height: 50px;
   display: flex;
+  align-items: center;
 }
 #headerIcon {
   height: 100%;
@@ -9,9 +10,11 @@
 
 #headerDiv > h1 {
   flex: 1;
+  margin: 0;
 }
 #switchLang {
   cursor: pointer;
+  text-align: center;
 }
 
 #main[lang='ENG'] #ENG {
